--- a/vignettes/MetaNeighbor.Rmd
+++ b/vignettes/MetaNeighbor.Rmd
@@ -124,12 +124,13 @@ from [here](https://github.com/gillislab/MetaNeighbor/tree/master/source%20packa
 and load them into your R session:
 
 ``` r
-library("MetaNeighbor")
+library(MetaNeighbor)
+library(SummarizedExperiment)
 data(mn_data)
 data(GOmouse)
 AUROC_scores = MetaNeighbor(dat = mn_data,
                             experiment_labels = as.numeric(factor(mn_data$study_id)),
-                            celltype_labels = mn_data@colData@metadata$cell_labels,
+                            celltype_labels = metadata(colData(mn_data))[["cell_labels"]],
                             genesets = GOmouse,
                             bplot = TRUE)
 ```
@@ -161,7 +162,8 @@ To run through the analysis, simply install the source package from our [Github 
 and load them into your R session:
 
 ``` {r eval = TRUE}
-library("MetaNeighbor")
+library(MetaNeighbor)
+library(SummarizedExperiment)
 data(mn_data)
 data(GOmouse)
 ```
@@ -178,7 +180,7 @@ for individual gene sets, and the large horizontal line represents the mean.
 ``` {r eval=TRUE,fig.width=4,fig.height=3}
 AUROC_scores = MetaNeighbor(dat = mn_data,
                             experiment_labels = as.numeric(factor(mn_data$study_id)),
-                            celltype_labels = mn_data@colData@metadata$cell_labels,
+                            celltype_labels = metadata(colData(mn_data))[["cell_labels"]],
                             genesets = GOmouse,
                             bplot = TRUE)
 ```
